--- a/src/front/src/App.css
+++ b/src/front/src/App.css
@@ -1,20 +1,38 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  /* 면접 준비 페이지 */
+  position: relative;
+  width: 1512px;
+  height: 1510px;
+  background: #FFFFFF;
+}
+
+.App-cam-header {
+  /* cam-header */
+  position: absolute;
+  width: 1512px;
+  /* display: flex; */
+  height: 215px;
+  /* min-height: 100vh; */
+  left: 0px;
+  top: 0px;
+  background-color: #000000;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  /* logo */
+  position: absolute;
+  width: 109px;
+  height: 104px;
+  left: 229px;
+  top: 66px;
+
+  background: url(logo.png);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
+/* .App-header {
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +40,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
