--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -12,7 +12,7 @@
     position: relative;
     width: 100%;
     height: 218px;
-    margin-top: 210px;
+    margin-top: 50px;
     /* left: 0px; */
     /* top: 215px; */
 }
@@ -51,7 +51,7 @@
     display: flex;
     align-items: center;
 
-    color: #A5A5A5;
+    color: #979797;
 }
 
 /*--------------------- cam setting ---------------------*/
@@ -91,7 +91,7 @@
     /* padding-right: 80px; */
     
     display: flex;
-    background-color: #A5A5A5
+    background-color: #cacaca
 }
 
 .cam-show {
