--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -11,7 +11,7 @@
 .description-layout {
     position: relative;
     width: 100%;
-    height: 218px;
+    height: 200px;
     margin-top: 50px;
     /* left: 0px; */
     /* top: 215px; */
@@ -79,6 +79,7 @@
 
     display: flex;
     align-items: center;
+
 }
 
 .cam-show-layout {
@@ -106,6 +107,38 @@
 
     display: flex;
     background-color: #000000
+}
+
+.mini-title {
+    /* height: 80px; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    font-size: 1.2rem;
+    
+}
+
+.Connected {
+    position: relative;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    color: white;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    width: 150px;
+    height: 30px;
+
+    background: rgba(0, 186, 30, 0.9);
+    border-radius: 45px;
+    
+
 }
 
 /*-------------------- start button --------------------*/
