Home.css  Add footer_top

--- a/src/front/src/pages/HomePage/Home.css
+++ b/src/front/src/pages/HomePage/Home.css
@@ -322,3 +322,8 @@ html { font-size: 62.5%; }
 
     color: rgba(0, 0, 0, 0.72);
   }
+  .footer_top{
+    z-index: 7;
+    position: absolute;
+    top:330vh;
+  }
