add button state

--- a/src/front/src/pages/InterviewPage/Interview.css
+++ b/src/front/src/pages/InterviewPage/Interview.css
@@ -1,4 +1,4 @@
-.InterviewApp {
+.interview-app {
     position: relative;
     width: "100%";
     height: 1110px;
@@ -6,3 +6,10 @@
     padding-right: 140px;
   }
 
+.interviewer-section {
+
+}
+
+.button-section {
+  
+}
