--- a/src/front/src/pages/InterviewPage/Interview.css
+++ b/src/front/src/pages/InterviewPage/Interview.css
@@ -1,15 +1,52 @@
 .interview-app {
     position: relative;
     width: "100%";
-    height: 1110px;
-    padding-left: 140px;
-    padding-right: 140px;
+    height: 100vh;
+    /* padding-left: 140px;
+    padding-right: 140px; */
   }
 
+/*-------------------- interviewer --------------------*/
 .interviewer-section {
-
+    position: relative;
+    width: 100%;
+    /* height: 650px; */
+    height: 85vh;
 }
 
+/*---------------------- button ----------------------*/
 .button-section {
-  
+    position: relative;
+    width: 100%;
+    /* height: 135px; */
+    /* margin-top: 330px; */
+    height: 15vh;
+
+    display: flex;
+}
+
+.start-interview-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 25px;
+
+    position: relative;
+    width: 200px;
+    height: 50px;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    color: white;
+    /* line-height: 37px; */
+
+    background: rgba(91, 126, 251, 0.5);
+    border-radius: 20px;
+    border: none;
+
+    cursor: pointer;
 }
