--- a/src/front/src/pages/InterviewPage/Interview.css
+++ b/src/front/src/pages/InterviewPage/Interview.css
@@ -1,52 +1,53 @@
 .interview-app {
-    position: relative;
-    width: "100%";
-    height: 100vh;
-    /* padding-left: 140px;
-    padding-right: 140px; */
-  }
+  position: relative;
+  width: "100%";
+  height: 100vh;
+  /* padding-left: 140px;
+  padding-right: 140px; */
+}
 
 /*-------------------- interviewer --------------------*/
 .interviewer-section {
-    position: relative;
-    width: 100%;
-    /* height: 650px; */
-    height: 90vh;
+  position: relative;
+  width: 100%;
+  /* height: 650px; */
+  height: 90vh;
 }
 
 /*---------------------- button ----------------------*/
 .button-section {
-    position: relative;
-    width: 100%;
-    /* height: 135px; */
-    /* margin-top: 330px; */
+  position: relative;
+  width: 100%;
+  /* height: 135px; */
+  /* margin-top: 330px; */
+  margin: auto;
 
-    display: flex;
+  display: flex;
 }
 
 .interview-button {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  margin-top: 10px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+margin: auto;
+margin-top: 10px;
 
-  position: relative;
-  width: 200px;
-  height: 48px;
+position: relative;
+width: 200px;
+height: 48px;
 
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  color: white;
+font-family: Montserrat;
+font-style: normal;
+font-weight: 500;
+font-size: 25px;
+color: white;
 
-  background: rgba(91, 126, 251, 0.5);
-  border-radius: 10px;
-  border: none;
+background: rgba(91, 126, 251, 0.5);
+border-radius: 10px;
+border: none;
 
-  cursor: pointer;
+cursor: pointer;
 }
 
 .interview-button:hover {
@@ -56,3 +57,12 @@ border-radius: 10px;
 cursor: pointer;
 }
 
+.link-to-mypage {
+text-decoration: none;
+margin: auto;
+display: flex; 
+position: relative;
+
+color: white;
+
+}
