--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -1,11 +1,16 @@
 .PreInterviewApp {
     position: relative;
     width: "100%";
-    height: 1110px;
+    height: 1060px;
     padding-left: 140px;
     padding-right: 140px;
   }
 
+.PreInterviewAppFooter {
+    position: relative;
+    width: "100%";
+    /* height: 50px; */
+}
 
 /*-------------------- description ---------------------*/
 .description-layout {
