--- a/src/front/src/pages/components/Footer.css
+++ b/src/front/src/pages/components/Footer.css
@@ -6,27 +6,28 @@ Home.js에서 style로 top 지정해도 페이지마다 다르게 보이는 건 
 */
 
 .FR-footer-gray{
-    position: fixed;
-    bottom: 0vh;
-    width: 98vw;
-    height: 17vh;
-    left: 0.5vw;
+    /* position: fixed; */
+    /* bottom: 0vh; */
+    width: 100%;
+    height: 12vh;
+    /* height: 100px; */
+    /* left: 0.5vw; */
 
     background: #F0F2F4;
   }
   .img-logo-footer{
-    position: absolute;
+    position: relative;
     width: 5vw;
-    left: 46.5vw;
-    top: 2.2vh;
+    /* left: 46.5vw;
+    top: 2.2vh; */
   }
   .footer-gray-txt{
-    position: absolute;
+    position: relative;
     width: 15vw;
 
     height: 3vw;
-    top: 4.7vw;
-    left: 41.5vw;
+    /* top: 4.7vw;
+    left: 41.5vw; */
     text-align: center;
 
     font-family: 'Montserrat';
