--- a/src/front/src/pages/components/Footer.css
+++ b/src/front/src/pages/components/Footer.css
@@ -5,7 +5,7 @@ Home.js에서 style로 top 지정해도 페이지마다 다르게 보이는 건 
 일단 모든 페이지 하단에서 보이게 쓸 수 있도록 fixed로 하단에 고정해 놓음! 
 */
 
-.FR-footer-gray{
+  .FR-footer-gray {
     /* position: fixed; */
     /* bottom: 0vh; */
     width: 100%;
@@ -15,13 +15,15 @@ Home.js에서 style로 top 지정해도 페이지마다 다르게 보이는 건 
 
     background: #F0F2F4;
   }
-  .img-logo-footer{
+  .img-logo-footer {
     position: relative;
     width: 5vw;
+    display: flex;
+    margin: auto;
     /* left: 46.5vw;
     top: 2.2vh; */
   }
-  .footer-gray-txt{
+  .footer-gray-txt {
     position: relative;
     width: 15vw;
 
