--- a/src/front/src/pages/components/Footer.css
+++ b/src/front/src/pages/components/Footer.css
@@ -9,7 +9,9 @@ Home.js에서 style로 top 지정해도 페이지마다 다르게 보이는 건 
     /* position: fixed; */
     /* bottom: 0vh; */
     width: 100%;
-    height: 12vh;
+    height: 10vh;
+    padding-top: 1vh;
+    padding-bottom: 1.5vh;
     /* height: 100px; */
     /* left: 0.5vw; */
 
@@ -17,7 +19,7 @@ Home.js에서 style로 top 지정해도 페이지마다 다르게 보이는 건 
   }
   .img-logo-footer {
     position: relative;
-    width: 5vw;
+    width: 4.5vw;
     display: flex;
     margin: auto;
     /* left: 46.5vw;
@@ -26,19 +28,19 @@ Home.js에서 style로 top 지정해도 페이지마다 다르게 보이는 건 
   .footer-gray-txt {
     position: relative;
     width: 15vw;
-    height: 3vw;
+    height: 1vw;
     display: flex;
     margin: auto;
     /* top: 4.7vw;
     left: 41.5vw; */
     justify-content: center;
-    
+
     text-align: center;
 
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    font-size: 0.95vw;
+    font-size: 0.9vw;
 
     color: #a0a0a0;
 
