--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -12,9 +12,9 @@
     position: relative;
     top: 80px;
     width: 20vw;
-    height: 78.5vh;
+    height: 89vh;
 
-    background: #dfdfdf;
+    background: #F0F2F4;
     flex-direction: row;
     align-items: stretch;
 }
@@ -24,6 +24,7 @@
     left: 2.5vw;
     top: 5vh;
     width: 10vw;
+    
 }
 .Menu-txt2{
     position: relative;
@@ -71,7 +72,8 @@
 
 .list_grid {
     display: grid;
-    grid-template-columns: 70% 15% 15%;
+    grid-template-columns: 60% 20% 20%;
+
 }
 
 .list_data {
@@ -80,4 +82,9 @@
 
 .acenter {
     text-align: center;
+}
+.mypage_footer_top{
+    z-index: 7;
+    position: absolute;
+    top: 110vh;
 }
