--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -28,15 +28,15 @@
 }
 .Menu-txt2{
     position: relative;
-    font-size: 1.3vw;
-    left: 8vw;
+    font-size: 1.1vw;
+    left: 11vw;
     top: 7vh;
     padding: 1rem;
     color: #5B7EFB;
     background: #fff;
-    font-weight: 700;
+    font-weight: 600;
     cursor: pointer;
-    width: 10.5vw;
+    width: 8vw;
 }
 .Menu-txt2:hover{
     color: #ff85a1;
@@ -44,9 +44,7 @@
 .Main-box{
     position: relative;
     width: 70vw;
-    left:21vw;
-
-
+    left:22.5vw;
 }
 .Img_mypage{
     position: absolute;
@@ -59,20 +57,21 @@
     margin-left: 50px;
     margin-right: 20px;
     min-height: 400px;
-    background: #56565c;
+    border: 0.2vw solid #5B7EFB;
 }
 
 .list_tit {
-    border-bottom: solid 1px #ababab;
+    border-bottom: solid 1.5px #56565c;
+    padding-bottom: 7px;
     color : #ababab;
-    font-size: 1.3vw;
-    font-weight: 700;
-    color: #5B7EFB;
+    font-size: 1.2vw;
+    font-weight: 600;
+    color: #56565c;
 }
 
 .list_grid {
     display: grid;
-    grid-template-columns: 60% 20% 20%;
+    grid-template-columns: 50% 25% 25%;
 
 }
 
