--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -1,9 +1,17 @@
-.PreInterviewApp {
+/* .PreInterviewApp {
     position: relative;
     width: "100%";
     height: 1060px;
     padding-left: 140px;
     padding-right: 140px;
+  } */
+  .PreInterviewApp {
+    /* position: relative; */
+    width: 100%;
+    height: auto;
+    /* padding-left: 140px;
+    padding-right: 140px; */
+    left: 0vw;
   }
 
 .PreInterviewAppFooter {
@@ -29,6 +37,7 @@
     height: 70px;
     padding-left: 80px;
     padding-top: 22px;
+    margin-top: 100px;
 
     font-family: Montserrat;
     font-style: normal;
@@ -181,4 +190,9 @@
     /* border-style: hidden; */
 
     cursor: pointer;
+}
+
+/*-------------------- select box --------------------*/
+.select-box {
+    color: red;
 }
