modify interviewer css

--- a/src/front/src/pages/InterviewPage/Interview.css
+++ b/src/front/src/pages/InterviewPage/Interview.css
@@ -10,8 +10,10 @@
 .interviewer-section {
   position: relative;
   width: 100%;
+  margin-left: auto;
   /* height: 650px; */
-  height: 90vh;
+  height: 80vh;
+  text-align: center;
 }
 
 /*---------------------- button ----------------------*/
