--- a/src/front/src/pages/MyPage/Mypage.css
+++ b/src/front/src/pages/MyPage/Mypage.css
@@ -66,7 +66,7 @@
 
 .list_grid {
     display: grid;
-    grid-template-columns: 50% 25% 25%;
+    grid-template-columns: 60% 40%;
 
 }
 .list_data {
