--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -72,7 +72,7 @@
 .cam-setting-layout {
     position: relative;
     /* width: 100%; */
-    height: 650px;
+    height: 580px;
     margin-top: 20px;
     margin-right: 80px;
     /* left: 0px; */
@@ -160,6 +160,9 @@
 .link-to-interviewpage {
     text-decoration: none;
 }
+.button-layout {
+    height: 120px;
+}
 
 .start-button {
     display: flex;
@@ -167,7 +170,7 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
-    margin-top: 25px;
+    /* margin-top: 25px; */
 
     position: relative;
     width: 200px;
@@ -204,12 +207,20 @@
 .select-interview-type-layout {
     position: relative;
     /* width: 100%; */
-    height: 350px;
+    height: 320px;
     margin-left: 80px;
     margin-top: 10px;
     /* margin-right: 80px; */
     /* padding-right: 80px; */
     
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 37px;
+    
     display: flex;
+    /* align-items: center; */
+
 }
 
