--- a/src/front/src/pages/PreInterviewPage/PreInterview.css
+++ b/src/front/src/pages/PreInterviewPage/PreInterview.css
@@ -88,13 +88,13 @@
 
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: 700;
+    font-size: 23px;
     line-height: 37px;
+    color: rgb(81, 119, 255);
 
     display: flex;
     align-items: center;
-
 }
 
 .cam-show-layout {
@@ -199,7 +199,7 @@
 /*-------------------- select box --------------------*/
 .select-interview-type {
     position: relative;
-    height: 150px;
+    height: 300px;
     margin-top: 20px;
     margin-right: 80px;
 }
@@ -207,7 +207,7 @@
 .select-interview-type-layout {
     position: relative;
     /* width: 100%; */
-    height: 320px;
+    height: 300px;
     margin-left: 80px;
     margin-top: 10px;
     /* margin-right: 80px; */
@@ -218,9 +218,8 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 37px;
-    
+
     display: flex;
     /* align-items: center; */
-
 }
 
